resources/tests/invalid_syntax/var_write_var.ct
//`Left hand side of an assignment should be a variable!
//1
fn main()->i64 {
  10 = 10;
}